# python_eink

./: CMakeLists.txt  Readme.md  setup.py
include/: EndianConversion.h  IT8951.hpp  ScreenManager.hpp  ScsiDriver.hpp  log.hpp
python_bindings/: CMakeLists.txt  PythonBindings.cpp
src/: IT8951.cpp  ScreenManager.cpp  ScsiDriverLinux.cpp  ScsiDriverWindows.cpp  log.cpp
